# SierraBreezeEnhanced

./: .gitignore  CMakeLists.txt  ChangeLog  NEWS  README.md  breeze.h  breeze.json  breezebutton.cpp  breezebutton.h  breezedecoration.cpp  breezedecoration.h  breezeexceptionlist.cpp  breezesettingsdata.kcfg  breezesettingsprovider.cpp  breezesizegrip.cpp  install.sh  sierrabreezeenhanced.json  uninstall.sh
config/: CMakeLists.txt  breezeconfigwidget.cpp  breezeconfigwidget.h  breezedetectwidget.cpp  breezedetectwidget.h  breezeenhancedconfig.desktop  breezeexceptiondialog.cpp  breezeexceptionlistwidget.cpp  breezelistmodel.h  kcm_sierrabreezeenhanceddecoration.cpp  sierrabreezeenhancedconfig.desktop
config/ui/: breezeconfigurationui.ui  breezeexceptiondialog.ui
libbreezecommon/: CMakeLists.txt  breezeboxshadowhelper.cpp  breezeboxshadowrenderer.cpp  breezeboxshadowrenderer.h
